--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.6.1",
+    "lottie-web": "^5.10.2",
     "next": "13.2.4",
     "prettier": "^2.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.7",
     "styled-components": "^5.3.9",
     "typescript": "5.0.2"
   }
