--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.6.1",
+    "graphql-request": "^5.2.0",
+    "graphql-tools": "^8.3.19",
     "lottie-web": "^5.10.2",
     "next": "13.2.4",
     "prettier": "^2.8.5",
