--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "^5.1.26",
-    "babel-plugin-styled-components": "^2.0.7",
+    "encoding": "^0.1.13",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.6.1",
     "graphql-request": "^5.2.0",
     "lottie-web": "^5.10.2",
     "next": "13.2.4",
+    "node-fetch": "^3.3.1",
     "prettier": "^2.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^3.2.2",
     "@graphql-codegen/client-preset": "^2.1.1",
-    "@graphql-codegen/typescript-graphql-request": "^4.5.8"
+    "@graphql-codegen/typescript-graphql-request": "^4.5.8",
+    "babel-plugin-styled-components": "^2.0.7"
   }
 }
